# Megakernels

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  test.py
.claude/: CLAUDE.md  settings.json
benchmarks/: benchmark_add.py  benchmark_attention.py  benchmark_causal_attention.py  benchmark_gemm.py  benchmark_itypes.py  benchmark_mlp.py  benchmark_proj_residual.py  benchmark_relu.py  benchmark_rms_lm_head.py  benchmark_rms_upgate_silu.py  benchmark_rmsnorm.py  common.py
csrc/: config.cuh  controller.cuh  megakittens.cu  megakittens.cuh  pgl.cuh  schema.cuh  state.cuh  util.cuh  utils.cuh  workers.cuh
csrc/controller/: controller.cuh  instruction_fetch.cuh  page_allocator.cuh  semaphore_constructor.cuh  timings_store.cuh
csrc/itypes/: add.cuh  attention.cuh  attention_partial.cuh  copy.cuh  elementwise_binary.cuh  elementwise_unary.cuh  gemm.cuh  gemmcta1.cuh  matvec_adds.cuh  noop.cuh  o_proj_residual.cuh  pos_id_increment.cuh  (+7 more)
include/: config.cuh  megakernel.cuh
megakittens/: __init__.py  backend.py  dag.py  dag_optimizer.py  dispatcher.py  fx_parser.py  instruction.py  interface.py  multi_dispatcher.py  scheduler.py  timings.py  tracer.py  utils.py
temp/: c_utils.py  cuda_utils.py  jit_gemm.py  jit_tk_gemm.py  nvrtc_jit.py  pykittens.py
tests/: common.py  test_add.py  test_attention.py  test_causal_attention.py  test_gemm.py  test_inplace.py  test_itype_mappings.py  test_itype_validity.py  test_itypes.py  test_jit.py  test_mlp.py  test_no_cluster.py  test_pgl.py  test_relu.py  test_rms_lm_head.py  test_rms_upgate_silu.py  test_rmsnorm.py
(+148 files in other folders)
